# procurement-data-generator

./: .cfignore  .env.example  .gitignore  CLAUDE.md  NEXT_STEPS.md  README.md  manifest.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEMO_SCENARIOS.md  DEPLOYMENT.md  GRAPHRAG_QUERY_PATTERNS.md  ML_USE_CASES.md
graphrag/: __init__.py  __main__.py  api.py  config.py  mcp_server.py
graphrag/backends/: __init__.py  hana_backend.py  networkx_backend.py  protocol.py
graphrag/llm/: __init__.py  agent.py  genai_hub.py  prompts.py  router.py
graphrag/observability/: trace.py
graphrag/retrieval/: __init__.py  context_formatter.py
ml/common/: __init__.py  db_config.py  feature_store.py  utils.py
plans/2026-03-06/: PLAN_1.md  PLAN_2.md  PLAN_3.md
plans/2026-03-11/: PLAN_1.md
plans/2026-03-14/: PLAN_GRAPHRAG.md
plans/2026-03-24/: PLAN_CF_UI_OBSERVABILITY.md
reference/: Procurement_AI_Demo_Full_Spec_v4.docx
scripts/: deploy_to_cf.sh  deploy_to_ec2.sh  deploy_to_hana.py
scripts/graph/: create_graph_workspace.sql  deploy_graph.py
seeds/: category_hierarchy.yaml  config.yaml  org_structure.yaml  seed_contracts.yaml  seed_legal_entities.yaml  seed_materials.yaml  seed_source_lists.yaml  seed_vendors.yaml
src/procurement_generator/: __init__.py  __main__.py  cli.py  config.py  data_store.py  models.py  pipeline.py  utils.py
test_results/2026-03-06/: TEST_1.md  (+1 more)
tests/: test_graphrag_agent.py  test_graphrag_networkx.py  test_graphrag_observability.py  test_graphrag_pipeline.py  test_graphrag_relational.py  test_graphrag_retrieval.py  test_graphrag_router.py  test_hana_exporter.py
todo/: TODO.md
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+52 files in other folders)
