[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement-data-generator"
version = "1.0.0"
description = "Generates realistic procurement datasets for AMR manufacturing demo"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "faker>=20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
postgres = ["psycopg2-binary>=2.9"]
hana = ["hdbcli>=2.18"]
ml = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "mlflow>=2.8",
    "optuna>=3.4",
    "shap>=0.43",
    "seaborn>=0.13",
    "plotly>=5.18",
    "jupyter>=1.0",
]
graphrag = [
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sap-ai-sdk-gen>=6.1.2",
    "pydantic>=2.0",
    "networkx>=3.0",
    "pandas>=2.0",
]
graphrag-hana = [
    "procurement-data-generator[graphrag]",
    "hdbcli>=2.18",
]

[project.scripts]
procurement-generator = "procurement_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["procurement_generator*", "graphrag*"]
